--- a/ActionAdventure-Group1/Packages/manifest.json
+++ b/ActionAdventure-Group1/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.professorakram.simpleunityhierarchyfolder": "https://github.com/ProfessorAkram/SimpleUnityHierarchyFolder.git",
     "com.unity.ai.navigation": "2.0.9",
     "com.unity.collab-proxy": "2.9.3",
     "com.unity.ide.rider": "3.0.38",
